--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.8.0/fonts/remixicon.css" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./src/style.css">
     <title>Figma</title>
 </head>
 
@@ -43,7 +43,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script type="module" src="./src/scripts/app.js"></script>
 </body>
 
 </html>
