Layer functionality completed.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!-- * Layers Panel -->
             <aside class="panel layers-panel">
                 <div class="panel-header">Layers</div>
-                <ul class="layers-list"></ul>
+                <ul id="layersList"></ul>
             </aside>
 
             <!-- * Canvas Area -->
