Export Function Completed - JSON, HTML

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
         <button class="text icons" data-name="text" aria-label="Text tool">
             <i class="icon ri-text" aria-hidden="true"></i>
         </button>
+
+        <div class="toolbar-group export">
+            <button id="exportJson" class="export-btn" aria-label="Export as JSON">
+                JSON
+            </button>
+            <button id="exportHtml" class="export-btn" aria-label="Export as HTML">
+                HTML
+            </button>
+        </div>
     </header>
 
     <main class="editor">
